# tensorplot

./: .gitignore  .pre-commit-config.yaml  .tensorvis-complete.bash  CONTRIBUTING.md  README.md  pyproject.toml  setup.py  utils.py  vis.py
.github/workflows/: publish.yml
.github/workfows/: publish.yml
Py_Vis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tensorplot/: vis.py
tensorplot/utils/: __init__.py  utils.py
tensorvis/: vis.py
tensorvis/utils/: __init__.py  utils.py
tests/: test_pandas_ops.py
