[tool.poetry]
name = "tensorvis"
version = "0.2.0"
description = "Visualisation tool to support my PhD automating the process of gathering data and plotting it"
authors = ["Nikolas Pitsillos <npitsillos@gmail.com>"]
readme = "README.md"
repository = "https://github.com/npitsillos/tensorplot.git"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.4"
click = "^7.1.2"
tensorboard = "^2.4.0"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
tensorvis = "tensorvis.vis:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
